--- a/data/preprocessing.ipynb
+++ b/data/preprocessing.ipynb
@@ -25,8 +25,7 @@
     "# ---------------------------------------------------------\n",
     "# 2. Load Dataset\n",
     "# ---------------------------------------------------------\n",
-    "# Example: raw dataset collected from Arduino Serial logs\n",
-    "df = pd.read_csv(\"solar_data_raw.csv\")\n",
+    "df = pd.read_csv(\"..data/solar_panel_monitor_dataset.csv\")\n",
     "\n",
     "# Inspect\n",
     "print(df.head())\n",
@@ -98,7 +97,7 @@
     "print(\"Preprocessing complete. Saved as solar_data_processed.csv\")\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 7. (Optional) Visualization\n",
+    "# 7. Visualization\n",
     "# ---------------------------------------------------------\n",
     "plt.figure(figsize=(8,4))\n",
     "plt.plot(df[\"timestamp\"], df[\"ldr_sum\"], label=\"Total LDR\")\n",
