--- a/ml-model/train_model.ipynb
+++ b/ml-model/train_model.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a292a150",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# ============================================================\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Train ML Models for Solar Panel Monitor\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# ============================================================\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# 1. Imports\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================\n",
     "# Train ML Models for Solar Panel Monitor\n",
@@ -41,7 +29,6 @@
     "# ------------------------------------------------------------\n",
     "# 3. Select features and targets\n",
     "# ------------------------------------------------------------\n",
-    "# Features (choose based on your preprocessing)\n",
     "features = [\n",
     "    \"ldr_tl\",\"ldr_tr\",\"ldr_bl\",\"ldr_br\",\n",
     "    \"ldr_sum\",\"ldr_left\",\"ldr_right\",\"ldr_top\",\"ldr_bottom\",\n",
@@ -105,7 +92,7 @@
     "joblib.dump(model_h, \"model_h.joblib\")\n",
     "joblib.dump(model_v, \"model_v.joblib\")\n",
     "\n",
-    "print(\"✅ Models saved: model_h.joblib & model_v.joblib\")\n"
+    "print(\"Models saved: model_h.joblib & model_v.joblib\")\n"
    ]
   }
  ],
